force-app/main/default/objects/Capital_Iem__c/Capital_Iem__c.object-meta.xml
<CustomObject>
    <description>CFR Database - to store Investment details</description>
    <label>Capital Item</label>
    <nameField>
        <displayFormat>CI-{00000000}</displayFormat>
        <label>Capital Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Capital Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>