force-app/main/default/objects/Capital_Iem__c/fields/Capital_Item__c.field-meta.xml
<CustomField>
    <fullName>Capital_Item__c</fullName>
    <description>Capital Item Details</description>
    <label>Capital Item</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>