force-app/main/default/objects/Capital_Iem__c/fields/Capital_Itemlink__c.field-meta.xml
<CustomField>
    <fullName>Capital_Itemlink__c</fullName>
    <formula>HYPERLINK( Id ,  Capital_Item__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capital Item</label>
    <type>Text</type>
</CustomField>