force-app/main/default/objects/Capital_Iem__c/fields/Capital_Request__c.field-meta.xml
<CustomField>
    <fullName>Capital_Request__c</fullName>
    <label>Capital Request</label>
    <referenceTo>Capital_Requests__c</referenceTo>
    <relationshipName>Capital_Iems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>