force-app/main/default/objects/Capital_Iem__c/fields/Supplemental__c.field-meta.xml
<CustomField>
    <fullName>Supplemental__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Capital item Supplemental Amount</description>
    <label>Supplemental</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>