force-app/main/default/objects/Capital_Iem__c/fields/Supplemental_with_Tax__c.field-meta.xml
<CustomField>
    <fullName>Supplemental_with_Tax__c</fullName>
    <label>Supplemental with Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>