force-app/main/default/objects/Capital_Iem__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <formula>$Label.HRC_CFR_Capital_Item_Tax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax %</label>
    <type>Text</type>
</CustomField>