force-app/main/default/objects/Capital_Iem__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <formula>if( Taxable__c , (VALUE( $Label.HRC_CFR_Capital_Item_Tax )*(Original__c  +  Supplemental__c))+(Original__c  +  Supplemental__c),Original__c  +  Supplemental__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>