force-app/main/default/objects/Capital_Iem__c/fields/TotalRollup__c.field-meta.xml
<CustomField>
    <fullName>TotalRollup__c</fullName>
    <description>Total for Rollup is used in CFR Object</description>
    <label>Total for Rollup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>